--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"laracasts/generators": "1.1.1",
+		"laracasts/testdummy": "2.3.2",
+        "illuminate/html": "5.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
