--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.0.*",
 		"laracasts/generators": "1.1.1",
 		"laracasts/testdummy": "2.3.2",
-        "illuminate/html": "5.*"
+        "illuminate/html": "5.*",
+		"barryvdh/laravel-ide-helper": "2.0.3"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
@@ -30,6 +31,7 @@
 	"scripts": {
 		"post-install-cmd": [
 			"php artisan clear-compiled",
+            "php artisan ide-helper:generate",
 			"php artisan optimize"
 		],
 		"post-update-cmd": [
