--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"laracasts/generators": "1.1.1",
 		"laracasts/testdummy": "2.3.2",
         "illuminate/html": "5.*",
-		"barryvdh/laravel-ide-helper": "2.0.3"
+		"barryvdh/laravel-ide-helper": "2.0.3",
+		"barryvdh/laravel-debugbar": "^2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
