--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"laracasts/testdummy": "2.3.2",
         "illuminate/html": "5.*",
 		"barryvdh/laravel-ide-helper": "2.0.3",
-		"barryvdh/laravel-debugbar": "^2.0"
+		"barryvdh/laravel-debugbar": "^2.0",
+		"predis/predis": "1.0.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
